# color-palette-generator

./: .gitignore  API.MD  README.MD  index.html  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/workflows/: deploy-page.yml
assets/css/: style.css
assets/js/: events.js  main.js
palettegen/: __init__.py  palettegen.py  utils.py  validator.py
tests/: conftest.py  test_config.py  test_upload_file.py
